updated BUILD files , upgraded version of com_github_googlecloudplatform_opentelemetry_operations_go_exporter_trace
Signed-off-by: Radek Ryckowski <radek.ryckowski@gmail.com>

--- a/pkg/store/labelpb/BUILD.bazel
+++ b/pkg/store/labelpb/BUILD.bazel
@@ -14,7 +14,7 @@ go_library(
         "@com_github_gogo_protobuf//proto",
         "@com_github_pkg_errors//:errors",
         "@com_github_prometheus_prometheus//model/labels",
-        "@org_go4_intern//:go_default_library",
+        "@org_go4_intern//:intern",
     ],
 )
 
