--- a/pkg/cacheutil/BUILD.bazel
+++ b/pkg/cacheutil/BUILD.bazel
@@ -26,6 +26,7 @@ go_library(
         "@com_github_pkg_errors//:errors",
         "@com_github_prometheus_client_golang//prometheus",
         "@com_github_prometheus_client_golang//prometheus/promauto",
+        "@com_github_rueian_rueidis//:rueidis",
         "@in_gopkg_yaml_v2//:yaml_v2",
         "@in_gopkg_yaml_v3//:yaml_v3",
         "@org_golang_x_sync//errgroup",
